tests/miniJava/neg/006836_mutation.MiniJava
class static java { public static void Main ( String [ ] java ) { { } } }
